import React from 'react';
import { render, fireEvent } from '@testing-library/react';
import CheckboxGroup from '../CheckboxGroup.component';
import Checkbox from '../Checkbox.component';

describe('CheckboxGroup', () => {
  it('renders with minimal props', () => {
    const { container } = render(
      <CheckboxGroup groupId="test-group-id">
        <Checkbox id="A-1" icon="check"><p>A-1 check</p></Checkbox>
        <Checkbox id="A-2" icon="check"><p>A-2 check</p></Checkbox>
        <Checkbox id="A-3" icon="check"><p>A-3 check</p></Checkbox>
      </CheckboxGroup>,
    );
    expect(container.innerHTML).toMatchSnapshot();
  });

  it('renders with props', () => {
    const mockTestClick = jest.fn();
    const { container } = render(
      <CheckboxGroup groupId="test-group-id" colSize="5" handleClick={mockTestClick}>
        <Checkbox id="A-1" icon="check"><p>A-1 check</p></Checkbox>
        <Checkbox id="A-2" icon="check"><p>A-2 check</p></Checkbox>
        <Checkbox id="A-3" icon="check"><p>A-3 check</p></Checkbox>
      </CheckboxGroup>,
    );

    const checkboxGroup = container.querySelector('#test-group-id');
    const chkA1 = container.querySelector('label[for="A-1"]');

    fireEvent.click(chkA1, { button: 0 });

    expect(checkboxGroup.id).toBe('test-group-id');
    expect(chkA1.getAttribute('disabled')).toBe(null);
    expect(chkA1.getElementsByTagName('svg')).toBeDefined();
    expect(mockTestClick).toHaveBeenCalled();
    expect(container.innerHTML).toMatchSnapshot();
  });

  it('checks on click', () => {
    const mockTestClick = jest.fn();
    const { container } = render(
      <CheckboxGroup groupId="test-group-id" colSize="5" handleClick={mockTestClick}>
        <Checkbox id="A-1" icon="check"><p>A-1 check</p></Checkbox>
        <Checkbox id="A-2" icon="check"><p>A-2 check</p></Checkbox>
        <Checkbox id="A-3" icon="check"><p>A-3 check</p></Checkbox>
      </CheckboxGroup>,
    );

    const chkA1Input = container.querySelector('#A-1');

    const chkA1Label = container.querySelector('label[for="A-1"]');
    fireEvent.click(chkA1Label, { button: 0 });

    expect(chkA1Input.checked).toBe(true);
    expect(container.innerHTML).toMatchSnapshot();
  });

  it('does not check when disabled', () => {
    const mockTestClick = jest.fn();
    const { container } = render(
      <CheckboxGroup groupId="test-group-id" colSize="5" handleClick={mockTestClick}>
        <Checkbox id="A-1" icon="check"><p>A-1 check</p></Checkbox>
        <Checkbox id="A-2" icon="check"><p>A-2 check</p></Checkbox>
        <Checkbox id="A-3" icon="check" disabled><p>A-3 check</p></Checkbox>
      </CheckboxGroup>,
    );

    const chkA3Input = container.querySelector('#A-3');

    const chkA3Label = container.querySelector('label[for="A-3"]');
    fireEvent.click(chkA3Label, { button: 0 });

    expect(chkA3Input.checked).toBe(false);
    expect(container.innerHTML).toMatchSnapshot();
  });
});
