// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxGroup.component renders with minimal props 1`] = `
"<div id=\\"test-group-id\\" class=\\"checkbox-group\\"><div class=\\"row \\" jsx=\\"true\\"><style></style><div class=\\"col-6 \\"><style></style><div class=\\"checkbox-wrap\\"><input id=\\"A-1\\" name=\\"A-1\\" type=\\"checkbox\\" class=\\"manor-checkbox-input\\"><label for=\\"A-1\\" class=\\"
            
            
          \\"><div class=\\"
            manor-checkbox 
            
            
          \\"></div><style></style><div class=\\"checkbox-content no-margin\\"><p>A-1 check</p></div></label></div></div><style></style><div class=\\"col-6 \\"><style></style><div class=\\"checkbox-wrap\\"><input id=\\"A-2\\" name=\\"A-2\\" type=\\"checkbox\\" class=\\"manor-checkbox-input\\"><label for=\\"A-2\\" class=\\"
            
            
          \\"><div class=\\"
            manor-checkbox 
            
            
          \\"></div><style></style><div class=\\"checkbox-content no-margin\\"><p>A-2 check</p></div></label></div></div><style></style><div class=\\"col-6 \\"><style></style><div class=\\"checkbox-wrap\\"><input id=\\"A-3\\" name=\\"A-3\\" type=\\"checkbox\\" class=\\"manor-checkbox-input\\"><label for=\\"A-3\\" class=\\"
            
            
          \\"><div class=\\"
            manor-checkbox 
            
            
          \\"></div><style></style><div class=\\"checkbox-content no-margin\\"><p>A-3 check</p></div></label></div></div><style jsx=\\"true\\">.row {
        @apply flex flex-wrap -mx-16;
      }
      </style></div></div>"
`;

exports[`CheckboxGroup.component renders with props 1`] = `
"<div id=\\"test-group-id\\" class=\\"checkbox-group\\"><div class=\\"row \\" jsx=\\"true\\"><style></style><div class=\\"col-5 \\"><style></style><div class=\\"checkbox-wrap\\"><input id=\\"A-1\\" name=\\"A-1\\" type=\\"checkbox\\" class=\\"manor-checkbox-input\\"><label for=\\"A-1\\" class=\\"
            
            
          \\"><div class=\\"
            manor-checkbox 
            
            
          \\"><svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"check\\" class=\\"svg-inline--fa fa-check fa-w-16 \\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\" style=\\"font-size: 2rem;\\"><path fill=\\"currentColor\\" d=\\"M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z\\"></path></svg></div><style></style><div class=\\"checkbox-content no-margin\\"><p>A-1 check</p></div></label></div></div><style></style><div class=\\"col-5 \\"><style></style><div class=\\"checkbox-wrap\\"><input id=\\"A-2\\" name=\\"A-2\\" type=\\"checkbox\\" class=\\"manor-checkbox-input\\"><label for=\\"A-2\\" class=\\"
            
            
          \\"><div class=\\"
            manor-checkbox 
            
            
          \\"></div><style></style><div class=\\"checkbox-content no-margin\\"><p>A-2 check</p></div></label></div></div><style></style><div class=\\"col-5 \\"><style></style><div class=\\"checkbox-wrap\\"><input id=\\"A-3\\" name=\\"A-3\\" type=\\"checkbox\\" class=\\"manor-checkbox-input\\"><label for=\\"A-3\\" class=\\"
            
            
          \\"><div class=\\"
            manor-checkbox 
            
            
          \\"></div><style></style><div class=\\"checkbox-content no-margin\\"><p>A-3 check</p></div></label></div></div><style jsx=\\"true\\">.row {
        @apply flex flex-wrap -mx-16;
      }
      </style></div></div>"
`;

exports[`generateGroup renders if there are children 1`] = `
"<style></style><div class=\\"col-6 \\"><style></style><div class=\\"checkbox-wrap\\"><input id=\\"A-1\\" name=\\"A-1\\" type=\\"checkbox\\" class=\\"manor-checkbox-input\\"><label for=\\"A-1\\" class=\\"
            
            
          \\"><div class=\\"
            manor-checkbox 
            
            
          \\"></div><style></style><div class=\\"checkbox-content no-margin\\"><p>A-1 check</p></div></label></div></div><style></style><div class=\\"col-6 \\"><style></style><div class=\\"checkbox-wrap\\"><input id=\\"A-2\\" name=\\"A-2\\" type=\\"checkbox\\" class=\\"manor-checkbox-input\\"><label for=\\"A-2\\" class=\\"
            
            
          \\"><div class=\\"
            manor-checkbox 
            
            
          \\"></div><style></style><div class=\\"checkbox-content no-margin\\"><p>A-2 check</p></div></label></div></div>"
`;
